--- a/src/Thesis.tex
+++ b/src/Thesis.tex
@@ -210,7 +210,14 @@
 
 % ================== DEDICATION ==================
 \dedication{
-    DA DEDICARE.
+  Non so manco se è tanto o poco\\
+  Ma questa cosa mi fa felice\\
+  E se faccio quello che faccio\\
+  Non devo dire grazie a nessuno\\
+  Soprattutto se faccio quello che amo\\
+  Non devo dire grazie a nessuno\\
+  Se non a me stesso\\
+  Per cui grazie Giò, grazie\\
 }
 % ================== ABSTRACT ==================
 
